src/snapshots/parser__c_log_entry.snap
---
created: "2019-01-22T02:11:48.239354+00:00"
creator: insta@0.4.1
expression: "parse_c_log_entry(b\"Tue Nov 21 00:30:05 2017 More stuff here\")"
source: src/parser.rs
---
Some(
    LogEntry {
        utc_timestamp: Some(
            2017-11-20T23:30:05Z
        ),
        message: "More stuff here"
    }
)
