src/snapshots/parser__common_webserver_log.snap
---
created: "2019-01-22T02:11:48.239434+00:00"
creator: insta@0.4.1
expression: "parse_common_alt_log_entry(b\"[Sun Feb 25 06:11:12.043123448 2018] [:notice] [pid 1:tid 2] process manager initialized (pid 1)\")"
source: src/parser.rs
---
Some(
    LogEntry {
        utc_timestamp: Some(
            2018-02-25T05:11:12Z
        ),
        message: "[:notice] [pid 1:tid 2] process manager initialized (pid 1)"
    }
)
