src/snapshots/parser__short_log_entry.snap
---
created: "2019-01-22T02:11:48.239316+00:00"
creator: insta@0.4.1
expression: "parse_short_log_entry(b\"Nov 20 21:56:01 herzog com.apple.xpc.launchd[1] (com.apple.preference.displays.MirrorDisplays): Service only ran for 0 seconds. Pushing respawn out by 10 seconds.\")"
source: src/parser.rs
---
Some(
    LogEntry {
        utc_timestamp: Some(
            2019-11-20T20:56:01Z
        ),
        message: "herzog com.apple.xpc.launchd[1] (com.apple.preference.displays.MirrorDisplays): Service only ran for 0 seconds. Pushing respawn out by 10 seconds."
    }
)
