src/snapshots/parser__short_log_entry_extra.snap
---
created: "2019-01-22T02:11:48.239272+00:00"
creator: insta@0.4.1
expression: "parse_short_log_entry(b\"Mon Nov 20 00:31:19.005 <kernel> en0: Received EAPOL packet (length = 161)\")"
source: src/parser.rs
---
Some(
    LogEntry {
        utc_timestamp: Some(
            2019-11-19T23:31:19Z
        ),
        message: "<kernel> en0: Received EAPOL packet (length = 161)"
    }
)
