src/snapshots/parser__simple_log_entry.snap
---
created: "2019-01-22T02:11:48.239274+00:00"
creator: insta@0.4.1
expression: "parse_simple_log_entry(b\"22:07:10 server  | detected binary path: /Users/mitsuhiko/.virtualenvs/sentry/bin/uwsgi\")"
source: src/parser.rs
---
Some(
    LogEntry {
        utc_timestamp: Some(
            2019-01-22T21:07:10Z
        ),
        message: "server  | detected binary path: /Users/mitsuhiko/.virtualenvs/sentry/bin/uwsgi"
    }
)
